test/errors/builtin_types_error/zs/bool_with_bitfield_arg_error.zs
package bool_with_bitfield_arg_error;

struct WrongBool
{
    bool<10>  wrong;
};
